Fix secondary button alignment

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -855,7 +855,6 @@ body > [data-popper-placement] {
 
     .button.secondary-post-button {
       flex: 0 1 auto;
-      padding-top: 0;
       padding-bottom: 0;
     }
   }
